fix/pre-overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,6 +49,7 @@ a:hover {
 pre {
   border-radius: 4px;
   padding: 1em;
+  overflow-x: auto;
   margin-top: 1em;
   margin-bottom: 1em;
   background-color: #161b22;
